lancache/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lancache
  namespace: media
  labels:
    app: lancache
spec:
  selector:
    matchLabels:
      app: lancache
  template:
    metadata:
      labels:
        app: lancache
    spec:
      containers:
      - name: lancache
        image: lancachenet/monolithic@sha256:3ef44774b9c72bd15078d65e9547b80abcb7f4f7572bcaf2fcdfc34d8ca5529e
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: lancache
          mountPath: /data/cache
          subPath: cache
        - name: lancache
          mountPath: /data/logs
          subPath: logs
      volumes:
      - name: lancache
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-lancache
