lancache/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lancache-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "steamcontent.com"
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: lancache-service
          servicePort: 80
  - host: "*.steamcontent.com"
    http: *http_rules
  - host: "*.steampowered.com"
    http: *http_rules
  - host: "*.hsar.steampowered.com.edgesuite.net"
    http: *http_rules
  - host: "*.akamai.steamstatic.com"
    http: *http_rules
  - host: "clientconfig.akamai.steamtransparent.com"
    http: *http_rules
  - host: "steampipe.akamaized.net"
    http: *http_rules
  - host: "edgecast.steamstatic.com"
    http: *http_rules
  - host: "steam.apac.qtlglb.com.mwcloudcdn.com"
    http: *http_rules
  - host: "*.edgecast.steamstatic.com"
    http: *http_rules
  - host: "cdn1-sea1.valve.net"
    http: *http_rules
  - host: "cdn2-sea1.valve.net"
    http: *http_rules
  - host: "*.steam-content-dnld-1.apac-1-cdn.cqloud.com"
    http: *http_rules
  - host: "*.steam-content-dnld-1.eu-c1-cdn.cqloud.com"
    http: *http_rules
  - host: "steam.apac.qtlglb.com"
    http: *http_rules
  - host: "edge.steam-dns.top.comcast.net"
    http: *http_rules
  - host: "edge.steam-dns-2.top.comcast.net"
    http: *http_rules
  - host: "steam.naeu.qtlglb.com"
    http: *http_rules
  - host: "steampipe-kr.akamaized.net"
    http: *http_rules
  - host: "steam.ix.asn.au"
    http: *http_rules
  - host: "steam.eca.qtlglb.com"
    http: *http_rules
  - host: "steam.cdn.on.net"
    http: *http_rules
  - host: "*.dota2.wmsj.cn"
    http: *http_rules
  - host: "*.csgo.wmsj.cn"
    http: *http_rules
  - host: "st.dl.bscstorage.net"
    http: *http_rules
  - host: "cdn.mileweb.cs.steampowered.com.8686c.com"
    http: *http_rules
